--- a/package.json
+++ b/package.json
@@ -7,36 +7,37 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "slicemachine": "start-slicemachine"
+    "slicemachine": "start-slicemachine",
+    "set-up-content": "npx tsx@latest ./set-up-content.ts"
   },
   "dependencies": {
-    "@prismicio/client": "^7.4.1",
+    "@prismicio/client": "^7.11.0",
     "@prismicio/next": "^1.5.0",
-    "@prismicio/react": "^2.7.4",
-    "@react-three/drei": "^9.89.0",
+    "@prismicio/react": "^2.7.3",
+    "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.15.11",
     "@types/three": "^0.158.3",
     "clsx": "^2.0.0",
     "gsap": "^3.12.2",
-    "next": "14.0.3",
+    "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "three": "^0.158.0"
+    "three": "^0.172.0"
   },
   "devDependencies": {
-    "@slicemachine/adapter-next": "^0.3.38",
+    "@slicemachine/adapter-next": "^0.3.27",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^9.17.0",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "slice-machine-ui": "^1.26.0",
+    "slice-machine-ui": "^2.11.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
