--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "14.0.3",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.1.3",
     "postcss": "^8",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
