--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.12.0",
     "three": "^0.172.0"
   },
